<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_rqt_plugin</name>
  <version>0.0.0</version>
  <description>This repository demonstrate custom rqt plugin on ROS2.</description>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>qt_gui_cpp</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>qt_gui_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
